--- a/Semana1/Aula05/Semana01/untMain.fmx
+++ b/Semana1/Aula05/Semana01/untMain.fmx
@@ -86,4 +86,25 @@ object Form1: TForm1
     Text = 'Heran'#231'a 02'
     OnClick = Button6Click
   end
+  object Memo1: TMemo
+    Touch.InteractiveGestures = [Pan, LongTap, DoubleTap]
+    DataDetectorTypes = []
+    Align = Bottom
+    Position.Y = 248.000000000000000000
+    Size.Width = 640.000000000000000000
+    Size.Height = 232.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 10
+    Viewport.Width = 636.000000000000000000
+    Viewport.Height = 228.000000000000000000
+  end
+  object Label1: TLabel
+    AutoSize = True
+    Position.X = 40.000000000000000000
+    Position.Y = 192.000000000000000000
+    Size.Width = 224.000000000000000000
+    Size.Height = 16.000000000000000000
+    Size.PlatformDefault = False
+    Text = 'Label1'
+  end
 end
