--- a/Semana3/Menus/view/Menus.View.Clientes.fmx
+++ b/Semana3/Menus/view/Menus.View.Clientes.fmx
@@ -34,4 +34,38 @@ object FrmCliente: TFrmCliente
     Size.PlatformDefault = False
     TabOrder = 1
   end
+  object StringGrid1: TStringGrid
+    Align = Client
+    CanFocus = True
+    ClipChildren = True
+    Size.Width = 455.000000000000000000
+    Size.Height = 440.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 3
+    Viewport.Width = 451.000000000000000000
+    Viewport.Height = 415.000000000000000000
+  end
+  object dsListaDados: TDataSource
+    AutoEdit = False
+    Left = 352
+    Top = 192
+  end
+  object BindSourceDB1: TBindSourceDB
+    DataSource = dsListaDados
+    ScopeMappings = <>
+    Left = 152
+    Top = 184
+  end
+  object BindingsList1: TBindingsList
+    Methods = <>
+    OutputConverters = <>
+    Left = 20
+    Top = 5
+    object LinkGridToDataSourceBindSourceDB1: TLinkGridToDataSource
+      Category = 'Quick Bindings'
+      DataSource = BindSourceDB1
+      GridControl = StringGrid1
+      Columns = <>
+    end
+  end
 end
