--- a/Semana3/Menus/view/Menus.View.Principal.fmx
+++ b/Semana3/Menus/view/Menus.View.Principal.fmx
@@ -25,4 +25,15 @@ object FrmMain: TFrmMain
     Size.PlatformDefault = False
     TabOrder = 2
   end
+  object Label1: TLabel
+    AutoSize = True
+    StyledSettings = [Family, Size, FontColor]
+    Position.X = 416.000000000000000000
+    Position.Y = 432.000000000000000000
+    Size.Width = 224.000000000000000000
+    Size.Height = 16.000000000000000000
+    Size.PlatformDefault = False
+    TextSettings.Font.StyleExt = {00070000000000000004000000}
+    Text = 'Label1'
+  end
 end
